# factorio-web

./: CLAUDE.md  Dockerfile  README.md  SECURITY.md  justfile  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: build_container.yml  dependabot_auto_merge.yml  mypy.yml  pylint.yml  pytest.yml
factorio_web/: __init__.py  __main__.py  config.py  middleware.py  models.py  rcon.py  rcon_command.py
factorio_web/static/: app.js  index-admin.html  index-nonadmin.html  index.html  styles.css
tests/: test_startup.py
