[project]
name = "factorio-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar>=2.18.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "rcon>=2.4.9",
    "uvicorn>=0.38.0",
]

[project.scripts]
factorio-web = "factorio_web.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["factorio_web"]
